--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: open-mission
+  mvc:
+    log-request-details: true
+logging:
+  level:
+    org.springframework.web.filter.CommonsRequestLoggingFilter: debug
