--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,15 @@
 spring:
   application:
     name: open-mission
+  h2:
+    show-sql: true
+    path: /h2-console
   mvc:
     log-request-details: true
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:~/open-mission
 logging:
   level:
     org.springframework.web.filter.CommonsRequestLoggingFilter: debug
